<resources>
    <string name="app_name">VoteApp</string>

    <!-- Testing -->
    <string name="test_home_label">Home Fragment</string>
    <string name="test_profile_label">Profile Fragment</string>
    <string name="test_images_label">User Images Fragment</string>
    <string name="test_voting_label">Voting Fragment</string>
    <string name="test_top_images_label">Top Images Fragment</string>
    <string name="test_top_users_label">Top Users Fragment</string>
    <string name="test_user_name">username</string>

    <!-- Drawer -->
    <string name="drawer_profile">Profile</string>
    <string name="drawer_user_images">My Images</string>
    <string name="drawer_voting">Voting</string>
    <string name="drawer_top_images">Top Images</string>
    <string name="drawer_top_users">Top Users</string>
    <string name="drawer_current_rating">Current rating: %d</string>

    <!-- Toolbar Titles -->
    <string name="home_title">Latest Images</string>
    <string name="auth_title">Authorization</string>
    <string name="profile_title">Profile</string>
    <string name="images_title">User Images</string>
    <string name="voting_title">Voting</string>
    <string name="top_images_title">Top Images</string>
    <string name="top_users_title">Top Users</string>

    <!-- Images List Adapter -->
    <string name="item_images_text_rating">Rating: %d</string>
    <string name="item_images_text_owner">Owner: %s</string>

    <!-- Auth Screens -->
    <string name="auth_text_login_label">Authorization</string>
    <string name="auth_text_register_label">Registration</string>
    <string name="auth_text_login">Login</string>
    <string name="auth_text_pass">Password</string>
    <string name="auth_text_pass_conf">Confirm password</string>
    <string name="auth_btn_login">Login</string>
    <string name="auth_btn_register">Register</string>

    <!-- User Images Screen -->
    <string name="images_menu_sort">Sort images</string>
    <string name="images_menu_sort_date">Sort by upload date</string>
    <string name="images_menu_sort_rating">Sort by rating</string>



    <!-- NAV -->
    <string name="loading_error">Ошибка загрузки данных</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_user_images">Мои фотографии</string>
    <string name="nav_voting">Голосование</string>
    <string name="nav_top_images">Топ фотографий</string>
    <string name="nav_top_users">Топ пользователей</string>

    <string name="login_et_hint_login">Логин</string>
    <string name="login_et_hint_pass">Пароль</string>
    <string name="login_btn_auth">Войти</string>
    <string name="login_btn_register">Зарегистироваться</string>
    <string name="login_toast_empty_login">Введите логин</string>
    <string name="login_toast_empty_pass">Введите пароль</string>
    <string name="login_toast_login_failed">Ошибка авторизации</string>

    <!-- REGISTER -->
    <string name="register_label">РЕГИСТРАЦИЯ</string>
    <string name="register_et_hint_login">Логин</string>
    <string name="register_et_hint_email">Электронная почта</string>
    <string name="register_et_hint_pass">Пароль</string>
    <string name="register_et_hint_confirm_pass">Подтвердите пароль</string>
    <string name="register_et_hint_name">Никнейм тестера</string>
    <string name="register_btn_registration">Зарегистироваться</string>
    <string name="register_attention">ВНИМАНИЕ!!! Приложение находится в тестовом режиме, не
        используйте настоящие пароли и электронную почту!!!</string>
    <string name="register_toast_fail_registration">Ошибка регистрации</string>
    <string name="register_toast_login_is_busy">Логин занят</string>
    <string name="register_toast_email_is_busy">Почта занята</string>
    <string name="register_toast_empty_login">Введите логин</string>
    <string name="register_toast_empty_email">Введите почту</string>
    <string name="register_toast_empty_pass">Введите пароль</string>
    <string name="register_toast_empty_conf_pass">Подтвердите пароль</string>
    <string name="register_toast_no_match_pass">Пароли не совпадают</string>
    <string name="register_toast_empty_name">Введите никнейм</string>

    <!-- PROFILE -->
    <string name="profile_name_label">Никнейм</string>
    <string name="profile_login_label">Логин</string>
    <string name="profile_email_label">Электронная почта</string>
    <string name="profile_btn_logout">Выйти</string>

    <!-- USER IMAGES -->
    <string name="menu_user_images_add">Добавить</string>

    <!-- IMAGE ADAPTER -->
    <string name="image_adapter_rating">Рейтинг: %d</string>
    <string name="image_item_desc">Image item</string>
    <string name="menu_item_image_delete">Удалить</string>
    <string name="item_image_error">Ошибка загрузки фотографии</string>

    <!-- OTHER -->
</resources>
